--- a/html-css/Cheese Quackers.html
+++ b/html-css/Cheese Quackers.html
@@ -24,7 +24,7 @@
 
     <h2>lalalalalala</h2>
     <br> <br> <br>
-    <img src="musky_boy.jpg" height="426" width="800">
+    <a href="dem_quackers.html"> <img src="musky_boy.jpg" height="426" width="800"> </a>
     <h2>cheeeeeese</h2>
     <br> <br> <br>
 </body>
