does things hehhhehhe

--- a/html-css/dem_quackers.html
+++ b/html-css/dem_quackers.html
@@ -4,7 +4,7 @@
 <body>
 
     <head>
-        <p><i><b>dem cheese quackers be damn goooooood</b></i></p>
+        <h1><i><b>dem cheese quackers be damn goooooood</b></i></h1>
     </head>
 </body>
 
