--- a/html-css/WOW/Best Types Of Cheese.html
+++ b/html-css/WOW/Best Types Of Cheese.html
@@ -15,7 +15,13 @@
 
 <body>
     <header>
-        <nav> Cheese </nav>
+        <nav>
+            <ul>
+                <li><a href="#">Cheese</a></li>
+                <li><a href="#">Cheesy</a></li>
+                <li><a href="#">Cheese</a></li>
+            </ul>
+        </nav>
         <br>
     </header>
     <main role="main">
@@ -27,10 +33,10 @@
                     processed. </p>
                 <a href="https://www.cheese.com/fresh-mozzarella/"> <img src="CM Button.jpg" width="250" height="250" />
                     <ul>
-                        <li> IT YUMMY </li>
-                        <li> IT YUMMY </li>
-                        <li> IT YUMMY </li>
-                        <li> IT YUMMY </li>
+                        <li class="cheese-icon"> IT YUMMY </li>
+                        <li class="cheese-icon"> IT YUMMY </li>
+                        <li class="cheese-icon"> IT YUMMY </li>
+                        <li class="cheese-icon"> IT YUMMY </li>
                     </ul>
                 </a>
             </article>
