--- a/html-css/WOW/Best Types Of Cheese.html
+++ b/html-css/WOW/Best Types Of Cheese.html
@@ -54,6 +54,29 @@
             <br> <br> <br>
             <hr>
         </section>
+        <section>
+            <h2>What is the yearly consumption of cheese</h2>
+            <table>
+                <tr>
+                    <th>Type Of Cheese:</th>
+                    <th>Yearly Consumption:</th>
+                </tr>
+                <tr>
+                    <th>Cheddar Cheese</th>
+                    <th>USA: 5,729</th>
+                </tr>
+                <tr>
+                    <th>Mozzerela Cheese</th>
+                    <th>RUSSIA: 749</th>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <th>Elpreet</th>
+                    <th colspan="2">Email</th>
+                </tr>
+            </table>
+        </section>
     </main>
 </body>
 
