--- a/html-css/WOW/Best Types Of Cheese.html
+++ b/html-css/WOW/Best Types Of Cheese.html
@@ -69,15 +69,36 @@
                     <th>Mozzerela Cheese</th>
                     <th>RUSSIA: 749</th>
                 </tr>
+                <tr>
+                    <th>Cheddar Cheese</th>
+                    <th>Brazil: 785</th>
+                </tr>
             </table>
             <table>
                 <tr>
-                    <th>Elpreet</th>
+                    <th>Name</th>
                     <th colspan="2">Email</th>
+                </tr>
+                <tr>
+                    <td><b>Elpreet</b></td>
+                    <td><b>elpreetb@gmail.com</b></td>
+                    <td><b>elpreetbajaj@gmail.com</b></td>
                 </tr>
             </table>
         </section>
     </main>
+    <footer>
+        <small>
+            <b>No Copyright Free To Sue 2024</b>
+        </small>
+    </footer>
+    <figure>
+        <img src="BEANS.jpg" alt="I LOVE BEANS *cough cough*">
+        <figcaption>
+            BEEAAANNNNSSSSS
+        </figcaption>
+    </figure>
+    
 </body>
 
 </html>
